--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Brände Pokernight WebApp{% endblock %}</title>
-        {% stylesheets '@kernel_css' %}
+        <title>{% block title %}Brainapp{% endblock %}</title>
+        {% stylesheets '@kernel_css' filter="cssrewrite" %}
         <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
     	{% endstylesheets %}
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body>
+   	<body class="index" id="page-top">
 	{% block body %}{% endblock %}
     {% javascripts '@kernel_js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
