--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-   	<body class="index" id="page-top">
+   	<body id="skin-blur-violate">
 	{% block body %}{% endblock %}
     {% javascripts '@kernel_js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
