--- a/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
@@ -37,6 +37,9 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
+                    <li class="">
+                        <a href="{{ path('login') }}">Login</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
