added register and password reset

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Brainapp{% endblock %}</title>
+        <title>.:: {% block title %}Brainapp{% endblock %} ::.</title>
         {% stylesheets '@kernel_css' filter="cssrewrite" %}
         <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
     	{% endstylesheets %}
