--- a/src/Brainapp/CoreBundle/Resources/views/Template/template_default.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Template/template_default.html.twig
@@ -20,3 +20,11 @@
 {% endblock content %}
 
 {% endblock body %}
+
+{% block javascripts %}
+{{ parent() }}
+{% javascripts 'bundles/brainappcore/js/functions.js' %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+{% endjavascripts %}
+{% endblock %}
+    
