--- a/src/Brainapp/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Security/login.html.twig
@@ -21,45 +21,14 @@
 	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>
 	</header>
 	<div class="clearfix"></div>
-	
-	{% if error %}
-	    <div class="alert alert-danger alert-dismissible" role="alert">
-	    	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	    	<strong>Oh nein!</strong> {{ error.messageKey|trans(error.messageData, 'security') }}
-    	</div>
-	{% endif %}
-	
-	<form id="box-login" class="box tile animated active" action="{{ path("fos_user_security_check") }}" method="post">
-		<h2 class="box-title">Login</h2>
-		<input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-		
-		<input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'security.login.username'|trans }}" required="required" class="login-control" />
-		<input type="password" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}" required="required" class="login-control" />
-		<input type="submit" id="submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn" />
-	    <small>
-	    	<a href="" data-switch="box-register" class="box-switcher">Noch keinen Account?</a> oder
-	    	<a href="" data-switch="box-reset" class="box-switcher">Passwort vergessen?</a>
-    	</small>
-	</form>
-	
-	<form id="box-register" class="box animated tile">
-		<h2 class="box">Register</h2>
-		<input type="text" placeholder="Full Name" class="login-control m-b-10">
-		<input type="text" placeholder="Username" class="login-control m-b-10">
-		<input type="email" placeholder="Email Address" class="login-control m-b-10">
-		<input type="password" placeholder="Password" class="login-control m-b-10">
-		<input type="password" placeholder="Confirm Password" class="login-control m-b-20">
-		
-		<button class="btn btn-sm m-r-5">Register</button>
-		<small><a href="" data-switch="box-login" class="box-switcher">Already have an Account?</a></small>
-	</form>
-	
-	<form id="box-reset" class="box animated tile">
-		<h2 class="box-title">Reset Password</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>
-		<input type="email" placeholder="Email Address" class="login-control m-b-20">
-		<button class="btn btn-sm m-r-5">Reset Password</button>
-		<small><a href="" data-switch="box-login" class="box-switcher">Already have an Account?</a></small>
-	</form>
+ {% if error %}
+    <div class="alert alert-danger alert-dismissible" role="alert">
+    	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    	<strong>Oh nein!</strong> {{ error.messageKey|trans(error.messageData, 'security') }}
+	</div>
+ {% endif %}
+	{% include 'BrainappUserBundle:Security:login_content.html.twig' %}
+	{% include 'BrainappUserBundle:Registration:register_content.html.twig' %}
+	{% include 'BrainappUserBundle:Resetting:reset_content.html.twig' %}
 </section>
 {% endblock %}
