--- a/src/Brainapp/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,13 +1,11 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 <form id="box-register" class="box animated tile" action="{{ path('fos_user_registration_register') }}">
-	<h2 class="box">Register</h2>
-	<input type="text" placeholder="Full Name" class="login-control m-b-10">
-	<input type="text" placeholder="Username" class="login-control m-b-10">
-	<input type="email" placeholder="Email Address" class="login-control m-b-10">
-	<input type="password" placeholder="Password" class="login-control m-b-10">
-	<input type="password" placeholder="Confirm Password" class="login-control m-b-20">
-		
+	<h2 class="box-title">Registrieren</h2>
+	<input type="text" placeholder="Benutzername" class="login-control m-b-10">
+	<input type="email" placeholder="E-Mail Adresse" class="login-control m-b-10">
+	<input type="password" placeholder="Passwort" class="login-control m-b-10">
+	<input type="password" placeholder="Passwort wiederholen" class="login-control m-b-20">
 	<button class="btn btn-sm m-r-5">{{ 'registration.submit'|trans }}</button>
-	<small><a href="" data-switch="box-login" class="box-switcher">Already have an Account?</a></small>
+	<small><a href="" data-switch="box-login" class="box-switcher">Account bereits vorhanden?</a></small>
 </form>
