added some login templates

--- a/src/Brainapp/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends "BrainappCoreBundle:Template:template_default.html.twig" %}
+{% extends "BrainappCoreBundle:Template:template_modern.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
